# fstty

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  PRD.md
crates/fstty-core/: Cargo.toml
crates/fstty-core/examples/: load_hierarchy.rs
crates/fstty-core/src/: error.rs  filter.rs  hierarchy.rs  lib.rs  types.rs  waveform.rs  wellen_adapter.rs  writer.rs
crates/fstty-core/src/fst/: export.rs  mod.rs  source.rs
crates/fstty-core/tests/fixtures/: des.fst  multi_vc_block.fst  rv32_soc_TB.vcd.fst  sigmoid_tb.vcd.fst  transaction.fst  waveform.vcd.fastlz.fst
crates/fstty-tui/: Cargo.toml
crates/fstty-tui/src/: app.rs  event.rs  export_state.rs  file_picker.rs  hierarchy_browser.rs  lib.rs  main.rs
crates/fstty-tui/src/components/: mod.rs  status.rs  tree.rs
