[workspace]
resolver = "2"
members = [
    "crates/fstty-core",
    # "crates/fstty-dataframe",
    # "crates/fstty-plugins",
    "crates/fstty-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["sjalloq"]
license = "MIT"
repository = "https://github.com/sjalloq/fstty-rs"

[workspace.dependencies]
# Waveform parsing and writing
wellen = "0.19"
fst-reader = { path = "../fst-reader" }
fst-writer = { path = "../fst-writer" }

# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tui-tree-widget = "0.23"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Plugin system (Stage 2)
mlua = { version = "0.11", features = ["lua54", "async", "send", "vendored"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Pattern matching
regex = "1.11"
glob = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Internal crates
fstty-core = { path = "crates/fstty-core" }
fstty-dataframe = { path = "crates/fstty-dataframe" }
fstty-plugins = { path = "crates/fstty-plugins" }
