[package]
name = "fstty-core"
description = "Core waveform abstractions for fstty"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wellen = { workspace = true }
fst-reader = { workspace = true }
fst-writer = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
