[package]
name = "fstty-tui"
description = "TUI application for fstty waveform analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "fstty"
path = "src/main.rs"

[dependencies]
# TUI dependencies
ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
rayon = "1.11"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"

# Waveform loading
fstty-core = { workspace = true }

# Tree widget for hierarchy browser
tui-tree-widget = { workspace = true }
